<resources>
    <string name="app_name">Music Play</string>
    <string name="chill_category">chill_category</string>
    <string name="chill_text_genre">Chill</string>
    <string name="focus_category_image">focus_category</string>
    <string name="indie_image_genre">indie_image_genre</string>
    <string name="focus_text_image">Focus</string>
    <string name="party_text_genre">Party</string>
    <string name="indie_text_genre">Indie</string>
    <string name="romance_text_image">Romance</string>
    <string name="sleep_text_genre">sleep</string>
    <string name="game_text__genre">Game</string>
    <string name="pop_image_genre">pop_image_genre</string>
    <string name="pop_music_genre">Pop</string>
    <string name="rap_music_genre">rap_music_genre</string>
    <string name="r_and_b"><![CDATA[R & B]]></string>
    <string name="rock_music_genre">rock_music_genre</string>
    <string name="rock">Rock</string>
    <string name="mood">Mood</string>
    <string name="soul_genre">soul_genre</string>
    <string name="soul">Soul</string>
    <string name="chill_artist_name">Troye Sivan</string>
    <string name="image_artist_view">image_artist_view</string>
    <string name="chillout">Blue Neighbourhood</string>
    <string name="heart_icon">heart_icon</string>
    <string name="track_number">1</string>
    <string name="track_1_name">Consideration</string>
    <string name="track_1_duration">2:16</string>
    <string name="track_number_2">2</string>
    <string name="track_name_2">Frozen Night</string>
    <string name="track_number_3">3</string>
    <string name="track_name_3">Kiss It Better</string>
    <string name="track_number_4">4</string>
    <string name="track_name_4">Youth</string>
    <string name="track_number_5">5</string>
    <string name="track_name_5">Desperado</string>
    <string name="track_number_6">6</string>
    <string name="track_name_6">Love On The Brain</string>
    <string name="track_number_7">7</string>
    <string name="dancing_in_the_night">Dancing in the night</string>
    <string name="track_number_8">8</string>
    <string name="track_name_8">Looking At The Stars</string>
    <string name="album_name">Youth</string>
    <string name="album_image">album_image</string>
    <string name="timeline">timeline</string>
    <string name="shuffle">shuffle</string>
    <string name="left_button">left_button</string>
    <string name="pause">pause</string>
    <string name="right_arrow">right_arrow</string>
    <string name="track_name_r">Ovidius</string>
    <string name="top_logo">logo</string>
</resources>
