<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spotify_background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/chill_album_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_artist_view"
            android:src="@drawable/chill_1" />

        <TextView
            android:id="@+id/chill_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/track_1_name"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/chill_track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chill_artist_name"
            android:layout_marginStart="71dp"
            android:text="@string/track_name_r"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/heart_icon"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/play_button"
            android:layout_marginStart="320dp"
            android:layout_marginTop="5dp"
            android:text="@string/track_1_duration"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>