<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spotify_background"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/parent_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rap_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chill_category"
            android:src="@drawable/rap_1" />

        <ImageView
            android:id="@+id/rap_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rap_image"
            android:layout_marginStart="220dp"
            android:contentDescription="@string/focus_category_image"
            android:src="@drawable/rap_2" />

        <ImageView
            android:id="@+id/rap_image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_2"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rap_3" />

        <ImageView
            android:id="@+id/rap_image_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_3"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rap_4" />

        <ImageView
            android:id="@+id/rap_image_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_4"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rap_5" />

        <ImageView
            android:id="@+id/rap_image_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_4"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rap_6" />

        <ImageView
            android:id="@+id/rap_image_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_2"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rap_7" />

        <ImageView
            android:id="@+id/rap_image_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_3"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rap_8" />

        <ImageView
            android:id="@+id/rap_image_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:contentDescription="@string/pop_image_genre"
            android:src="@drawable/rap_9" />

        <ImageView
            android:id="@+id/rap_image_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_9"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/rap_music_genre"
            android:src="@drawable/rap_10" />

        <ImageView
            android:id="@+id/rap_image_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_10"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/rock_music_genre"
            android:src="@drawable/rap_11" />

        <ImageView
            android:id="@+id/rap_image_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rap_image_11"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/soul_genre"
            android:src="@drawable/rap_12" />

    </RelativeLayout>
</ScrollView>