<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spotify_background"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/parent_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rock_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chill_category"
            android:src="@drawable/rock_1" />

        <ImageView
            android:id="@+id/rock_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rock_image"
            android:layout_marginStart="220dp"
            android:contentDescription="@string/focus_category_image"
            android:src="@drawable/rock_2" />

        <ImageView
            android:id="@+id/rock_image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_2"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rock_3" />

        <ImageView
            android:id="@+id/rock_image_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_3"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rock_4" />

        <ImageView
            android:id="@+id/rock_image_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_4"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rock_5" />

        <ImageView
            android:id="@+id/rock_image_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_4"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rock_6" />

        <ImageView
            android:id="@+id/rock_image_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_2"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rock_7" />

        <ImageView
            android:id="@+id/rock_image_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_3"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/indie_image_genre"
            android:src="@drawable/rock_8" />

        <ImageView
            android:id="@+id/rock_image_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:contentDescription="@string/pop_image_genre"
            android:src="@drawable/rap_9" />

        <ImageView
            android:id="@+id/rock_image_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_9"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/rap_music_genre"
            android:src="@drawable/rock_10" />

        <ImageView
            android:id="@+id/rock_image_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_10"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/rock_music_genre"
            android:src="@drawable/rock_11" />

        <ImageView
            android:id="@+id/rock_image_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rock_image_11"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/soul_genre"
            android:src="@drawable/rock_12" />

    </RelativeLayout>
</ScrollView>